deployments/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-sensor-api-svc
  labels:
    app: car-sensor-api
  annotations:
    # Tailscale K8s operator: expose this service on your tailnet
    tailscale.com/expose: "true"
    tailscale.com/hostname: "car-sensor-api"   # accessible as car-sensor-api.<tailnet>.ts.net
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: car-sensor-api
